# forge

./: .gitignore  Cargo.toml  README.md  forge.default.yaml  forge.toml  forge.yaml  install.sh
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: cli.rs  command.rs  completion.rs  engine.rs  error.rs  lib.rs  log.rs  main.rs  runtime.rs  tui.rs  walker.rs
crates/forge-cli/src/core/: open_router.rs
crates/forge-cli/src/prompts/: system.md
crates/forge-prompt/: Cargo.toml
crates/forge-prompt/src/: completion.rs  error.rs  lib.rs  prompt.rs  walker.rs
crates/forge-provider/: Cargo.toml
crates/forge-provider/src/: error.rs  lib.rs  log.rs  model.rs  models.json  ollama.rs  open_ai.rs  open_router.rs  provider.rs  response.rs
crates/forge-provider/src/open_router/: mod.rs  model_response.rs  provider.rs  request.rs  response.rs
crates/forge-server/: Cargo.toml
crates/forge-server/src/: app.rs  broadcast.rs  completion.rs  conversation.rs  engine.rs  engine_old.rs  error.rs  lib.rs  main.rs  server.rs  template.rs
crates/forge-tool/: Cargo.toml
crates/forge-tool/src/: ask.rs  console.rs  fs.rs  fs.schema.json  lib.rs  model.rs  outline.rs  prompt.rs  prompt_parser.rs  provider.rs  router.rs  shell.rs  think.rs  think.schema.json  tool.rs
crates/forge-tool/src/fs/: file_info.rs  fs_read.rs  list.rs  mod.rs  read.rs  replace.rs  search.rs  write.rs
crates/forge-tool/src/queries/: rust.rkt
crates/forge-tool/src/snapshots/: forge_tool__outline__tests__outline_javascript.snap  forge_tool__outline__tests__outline_multiple_files.snap  forge_tool__outline__tests__outline_python.snap  forge_tool__outline__tests__outline_rust.snap  forge_tool__outline__tests__outline_unsupported_files.snap
crates/forge_api/: Cargo.toml
crates/forge_api/src/: api.rs  executor.rs  forge_api.rs  forge_default.rs  lib.rs  loader.rs  suggestion.rs  test.rs
crates/forge_api/src/snapshots/: forge_api__loader__tests__load_workflow_with_file_prompt.snap  forge_api__loader__tests__load_workflow_with_missing_prompt_file.snap  forge_api__loader__tests__load_workflow_with_string_literals.snap  forge_api__workflow_loader__tests__load_workflow_with_file_prompt.snap  forge_api__workflow_loader__tests__load_workflow_with_missing_prompt_file.snap  forge_api__workflow_loader__tests__load_workflow_with_string_literals.snap
crates/forge_app/: Cargo.toml  diesel.toml
crates/forge_app/migrations/20250103005724_create_conversations/: up.sql
crates/forge_app/migrations/20250106111635_add-title-column-to-conversations-table/: up.sql
crates/forge_app/src/: app.rs  attachment.rs  context.rs  conversation.rs  env.rs  error.rs  lib.rs  prompt.rs  provider.rs  routes.rs  schema.rs  sqlite.rs  suggestion.rs  template.rs  tool_service.rs  workflow.rs
crates/forge_app/src/prompts/: mod.rs  title.md  tool_use.md  tool_use_example.md
crates/forge_app/src/repo/: config.rs  conversation.rs  mod.rs
crates/forge_app/src/service/: api.rs  api_task.md  chat.rs  completion.rs  env.rs  file_read.rs  mod.rs  (+10 more)
crates/forge_display/: Cargo.toml
crates/forge_display/src/: diff.rs  grep.rs  lib.rs  markdown.rs  title.rs
crates/forge_domain/: Cargo.toml
crates/forge_domain/src/: agent.rs  api.rs  arena.rs  attachment.rs  chat_request.rs  chat_response.rs  chat_stream_ext.rs  command.rs  compaction.rs  compaction_result.rs  config.rs  context.rs  context_ext.rs  conversation.rs  conversation_html.rs  conversation_style.css  dispatch_event.rs  env.rs  environment.rs  errata.rs  error.rs  event.rs  file.rs  image.rs  knowledge.rs  lib.rs  log.rs  mcp.rs  merge.rs  message.rs  model.rs  orch.rs  prompt.rs  provider.rs  request.rs  response.rs  retry_config.rs  service.rs  services.rs  shell.rs  (+24 more)
crates/forge_infra/: Cargo.toml
crates/forge_infra/src/: auth.rs  embedding.rs  env.rs  executor.rs  file_read.rs  forge_infra.rs  fs_create_dirs.rs  fs_meta.rs  fs_read.rs  fs_remove.rs  fs_snap.rs  fs_write.rs  infra.rs  inquire.rs  knowledge.rs  lib.rs  mcp_client.rs  mcp_server.rs  qdrant.rs  test.rs
crates/forge_inte/: Cargo.toml
crates/forge_inte/fixtures/: juniper.md
crates/forge_inte/tests/: api_spec.rs  test_workflow.rs  test_workflow.yaml
crates/forge_main/: Cargo.toml  build.rs
crates/forge_main/src/: auto_update.rs  banner  banner.rs  cli.rs  command.rs  config.rs  console.rs  editor.rs  error.rs  info.rs  input.rs  keyboard.rs  lib.rs  log.rs  main.rs  model.rs  normalize.rs  prompt.rs  state.rs  status.rs  title_format.rs  tools_display.rs  ui.rs  update.rs  worktree.rs
crates/forge_oauth/: Cargo.toml
crates/forge_oauth/src/: callback.rs  error.rs  lib.rs  oauth.rs  user_info.rs
crates/forge_open_router/: Cargo.toml
crates/forge_open_router/src/: builder.rs  error.rs  lib.rs  mod.rs  model.rs  open_router.rs  provider.rs  request.rs  response.rs  tool_choice.rs
crates/forge_provider/: Cargo.toml
crates/forge_provider/src/: builder.rs  client.rs  error.rs  lib.rs  mock.rs  model.rs  ollama.rs  open_ai.rs  provider.rs  request.rs  response.rs  retry.rs  utils.rs
crates/forge_server/: Cargo.toml  diesel.toml
crates/forge_server/src/: api.rs  app.rs  app_runtime.rs  atomic.rs  command_executor.rs  completion.rs  context.html  context.rs  conversation.rs  environment.rs  error.rs  executor.rs  lib.rs  log.rs  routes.rs  runtime.rs  schema.rs  server.rs  specification.rs  sqlite.rs  system_prompt.rs  template.rs
crates/forge_services/: Cargo.toml
crates/forge_services/src/: attachment.rs  clipper.rs  compaction.rs  conversation.rs  forge_services.rs  infra.rs  lib.rs  provider.rs  suggestion.rs  template.rs  tool_service.rs  workflow.rs
crates/forge_snaps/: Cargo.toml
crates/forge_snaps/src/: lib.rs  service.rs  snapshot.rs
crates/forge_tool/: Cargo.toml
crates/forge_tool/src/: approve.rs  ask.rs  error.rs  fetch.rs  lib.rs  outline.rs  pretty_differ.rs  router.rs  select.rs  shell.rs  think.rs  tool.rs  tool_call_service.rs  tool_engine.rs  tool_service.rs
crates/forge_tracker/: Cargo.toml
crates/forge_tracker/src/: can_track.rs  dispatch.rs  event.rs  lib.rs  log.rs
(+728 files in other folders)
