[package]
name = "code-forge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = { version = "0.25", features = ["crossterm"] }
crossterm = "0.27"
futures = "0.3"
tokio-stream = "0.1"
thiserror = "1.0"
async-openai = "0.14"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
