[package]
name = "code-forge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = { version = "0.25", features = ["crossterm"] }
crossterm = "0.27"
futures = "0.3"
tokio-stream = "0.1"
thiserror = "1.0"
async-openai = "0.14"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_setters = "0.1.6"
derive_more = { version = "1.0.0", features = ["full"] }
clap = { version = "4.5.23", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
