[package]
name = "forge-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
derive_setters = "0.1.6"
derive_more = { version = "1.0.0", features = ["full"] }
clap = { version = "4.5.23", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"
inquire = "0.7.5"
strum = "0.25"
strum_macros = "0.25"
forge-engine = { path = "../forge-engine" }
spinners = "4.1.1"
colorize = "0.1.0"
async-trait = "0.1.83"
ignore = "0.4"

[dev-dependencies]
indoc = "2.0.5"
pretty_assertions = "1.4.1"
