[package]
name = "forge-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "^0.7" }
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
derive_more = { version = "1.0.0", features = ["full"] }
clap = { version = "4.5.23", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"
inquire = "0.7.5"
colorize = "0.1.0"
async-trait = "0.1.83"
ignore = "0.4"
forge-tool = { path = "../forge-tool" }
forge-prompt = { path = "../forge-prompt" }
forge-provider = { path = "../forge-provider" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
derive_setters = "0.1.6"
spinners = "4.1.1"
termsize = "0.1.9"

[dev-dependencies]
indoc = "2.0.5"
pretty_assertions = "1.4.1"
