[package]
name = "forge-prompt"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = {version = "1.0.0", features = ["from", "display"]}
futures = "0.3.31"
ignore = "0.4.23"
inquire = "0.7.5"
nom = "7.1.3"
serde = "1.0.216"
thiserror = "2.0.9"
tokio = "1.42.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
