[package]
name = "forge-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"
async-openai = "0.14"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.41"
async-trait = "0.1.83"
derive_more = { version = "1.0.0", features = ["from", "display"] }
derive_setters = "0.1.6"
forge-tool = { path = "../forge-tool" }
reqwest-middleware = { version = "0.4.0", features = ["rustls-tls"] }
http = "1.2.0"
serde-xml-rs = "0.6.0"
