[package]
name = "forge-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
url = { version = "2.5", features = ["serde"] }
tracing = "0.1"
home = "0.5.11"
colorize = "0.1.0"
Inflector = "0.11.4"
