[package]
name = "forge-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
url = { version = "2.5", features = ["serde"] }
tracing = "0.1"
colorize = "0.1.0"
Inflector = "0.11.4"
forge-tool-macros = { path = "../forge-tool-macros" }
forge-prompt = { path = "../forge-prompt" }
schemars = "0.8.21"
ignore = "0.4"

[dev-dependencies]
tempfile = "3.8.1"
