[package]
name = "forge_api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
forge_domain = { path = "../forge_domain" }
forge_stream = { path = "../forge_stream" }
forge_app = { path = "../forge_app" }
forge_walker = { path = "../forge_walker" }
forge_infra = { path = "../forge_infra" }

[dev-dependencies]
tempfile = "3.8.1"
tokio = { version = "1.0", features = ["full"] }
insta = "1.41.1"
serde_json = "1.0.133"
serde = { version = "1.0" }
