[package]
name = "forge_api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
forge_domain.workspace = true
forge_stream.workspace = true
forge_services.workspace = true
forge_walker.workspace = true
forge_infra.workspace = true
forge_snaps.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
merge.workspace = true
bytes.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true }
insta.workspace = true
serde.workspace = true