[package]
name = "forge_display"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_setters.workspace = true
colored.workspace = true
chrono.workspace = true
similar.workspace = true
console.workspace = true
regex.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
strip-ansi-escapes.workspace = true