[package]
name = "forge_domain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.84"
chrono = { version = "0.4.39", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["from", "display"] }
derive_setters = "0.1.6"
futures = "0.3.31"
nom = "8.0.0"
schemars = "0.8.21"
serde = "1.0.217"
serde_json = "1.0.134"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "2.0.11"
tokio = { version = "1.42.0", features = ["full", "test-util"] }
tokio-stream = "0.1.17"
uuid = { version = "1.11.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
async-recursion = "1.1.1"
tracing = "0.1.41"

[dev-dependencies]
insta = { version = "1.34.0", features = ["json"] }
pretty_assertions = "1.4.1"
