[package]
name = "forge_domain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
derive_more.workspace = true
derive_setters.workspace = true
futures.workspace = true
nom.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
uuid.workspace = true
async-recursion.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true