[package]
name = "forge_infra"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
dirs = "6.0.0"
dotenv = "0.15.0"
forge_domain = { path = "../forge_domain" }
forge_app = { path = "../forge_app" }
tokio = "1.43.0"
serde_json = "1.0.138"
qdrant-client = "1.13.0"
reqwest = {version = "0.12.12", features = ["json", "rustls-tls"], default-features = false}
serde = { version = "1.0", features = ["derive"] }
bytes = "1.10.0"

[dev-dependencies]
serial_test = "2.0.0"