[package]
name = "forge_infra"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
dirs.workspace = true
dotenv.workspace = true
forge_domain.workspace = true
forge_app.workspace = true
tokio.workspace = true
serde_json.workspace = true
qdrant-client.workspace = true
reqwest.workspace = true
serde.workspace = true
bytes.workspace = true