[package]
name = "forge_inte"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
anyhow.workspace = true
forge_api.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
serde_yaml.workspace = true
forge_tracker.workspace = true
forge_domain.workspace = true

[dependencies]
dotenv.workspace = true
