[package]
name = "forge"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
forge_api = { path = "../forge_api" }
forge_walker = { path = "../forge_walker" }
forge_display = { path = "../forge_display" }
forge_tracker = { path = "../forge_tracker" }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.17"
colored = "3.0.0"
async-trait = "0.1"
anyhow = "1.0.95"
derive_setters = "0.1"
lazy_static = "1.4.0"
reedline = "0.38.0"
nu-ansi-term = "0.50.1"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
chrono = "0.4.39"
serde_json = "1.0.138"

[dev-dependencies]
insta = "1.34.0"
pretty_assertions = "1.4.1"
