[package]
name = "forge_oauth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
axum = "0.8"
keyring = "2.0.5"
openidconnect = "3.5.0"
open = "5.0.1"
reqwest = { version = "0.12.12", features = ["json", "blocking", "rustls-tls"], default-features = false}
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "2.0.12"
tiny_http = "0.12.0"
url = "2.5.0"
tokio = { version = "1.0", features = ["full"] }
