[package]
name = "forge_open_router"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10.2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.41"
async-trait = "0.1.83"
derive_more = { version = "1.0.0", features = ["from", "display"] }
derive_setters = "0.1.6"
reqwest-eventsource = "0.6.0"
strum = "0.26.3"
strum_macros = "0.26.4"
forge_domain = { path = "../forge_domain" }
anyhow = "1.0.75"
thiserror = "2.0.11"
derive_builder = "0.20.2"

[dev-dependencies]
insta = { version = "1.36.1", features = ["json"] }
pretty_assertions = "1.4.1"
