[package]
name = "forge_provider"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.41"
async-trait = "0.1.83"
derive_more = { version = "1.0.0", features = ["from", "display"] }
derive_setters = "0.1.6"
forge_tool = { path = "../forge_tool" }
reqwest-eventsource = "0.6.0"
