[package]
name = "forge_server"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
diesel_migrations = "2.1.0"
axum = { version = "^0.8.0", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["full", "test-util"] }
derive_more = { version = "1.0.0", features = ["full"] }
clap = { version = "4.5.23", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.83"
forge_tool = { path = "../forge_tool" }
forge_provider = { path = "../forge_provider" }
forge_walker = { path = "../forge_walker" }
forge_prompt = { path = "../forge_prompt" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
derive_setters = "0.1.6"
dotenv = "0.15.0"
tokio-stream = "0.1.17"
pulldown-cmark = { version = "0.12.0" }
handlebars = "6.2.0"
r2d2 = "0.8.10"
forge_domain = { path = "../forge_domain" }
dirs = "6.0.0"

[dev-dependencies]
insta = "1.41.1"
pretty_assertions = "1.4.1"
schemars = "0.8.21"
tempfile = "3.10.1"
