[package]
name = "forge_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
dissimilar = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tracing = "0.1"
colorize = "0.1.0"
Inflector = "0.11.4"
forge_tool_macros = { path = "../forge_tool_macros" }
schemars = "0.8.21"
regex = "1.10.2"
walkdir = "2.4.0"
glob = "0.3.1"
tree-sitter = "0.24.0"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
forge_walker = { path = "../forge_walker" }
forge_domain = { path = "../forge_domain" }
tempfile = "3.8.1"
streaming-iterator = "0.1.9"

[dev-dependencies]
insta = "1.34.0"
pretty_assertions = "1.4.1"
