[package]
name = "forge_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
derive_more = {version = "2.0.1", features = ["full"]}
url = "2.2.2"
serde = "1.0.134"
serde_json = "1.0.66"
machineid-rs = "1.2.4"
tokio = { version = "1.43.0", features = ["rt", "time", "full"] }
tracing = { version = "0.1.26" }
sysinfo = "0.33.1"
posthog-rs = { git = "https://github.com/PostHog/posthog-rs.git", rev = "a006a81419031e4889d9c3882d7458d2efa588a8" }
async-trait = "0.1.81"
chrono = "0.4.38"
whoami = "1.5.2"
convert_case = "0.7.1"
http = "1.2.0"
regex = "1.11.1"

[dev-dependencies]
lazy_static = "1.5.0"
strum = "0.27.0"
