[package]
name = "file_system"
version = "0.1.0"
edition = "2021"

[dependencies]
forge-mcp = { path = "../../.." }                       # This points to your main project
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing-subscriber = "0.3"
tracing = "0.1"
home = "0.5.9"
